force-app/main/default/objects/Typeform__mdt/Typeform__mdt.object-meta.xml
<CustomObject>
    <label>Typeform</label>
    <pluralLabel>Typeforms</pluralLabel>
</CustomObject>