force-app/main/default/objects/Typeform__mdt/fields/AuthURL__c.field-meta.xml
<CustomField>
    <fullName>AuthURL__c</fullName>
    <label>AuthURL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>