force-app/main/default/objects/Typeform__mdt/fields/Callback_Url__c.field-meta.xml
<CustomField>
    <fullName>Callback_Url__c</fullName>
    <label>Callback Url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>