force-app/main/default/objects/Typeform__mdt/fields/FormsUrl__c.field-meta.xml
<CustomField>
    <fullName>FormsUrl__c</fullName>
    <label>FormsUrl</label>
    <required>true</required>
    <type>Url</type>
</CustomField>