force-app/main/default/objects/Typeform__mdt/fields/Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Page_Size__c</fullName>
    <label>Page Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>