force-app/main/default/objects/Typeform__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>https://developer.typeform.com/get-started/scopes/</description>
    <inlineHelpText>accounts:read
Posible entities : account | forms |  images | themes | responses | webhooks | workspaces
Posible actions : read | write</inlineHelpText>
    <label>Scope</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>