force-app/main/default/objects/Typeform__mdt/fields/TokenUrl__c.field-meta.xml
<CustomField>
    <fullName>TokenUrl__c</fullName>
    <label>TokenUrl</label>
    <required>true</required>
    <type>Url</type>
</CustomField>